--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -59,7 +59,7 @@
                   </span>
                 </div>
                 <div class="mt-20">
-                  <%= render "enroll_request", event: @event %>
+                  <%= render "enroll_request", event: @event, user: current_user %>
                 </div>
               </div>
             </div>
