--- a/app/views/user_enroll_events/_participant.html.erb
+++ b/app/views/user_enroll_events/_participant.html.erb
@@ -1,6 +1,6 @@
 <%= label_tag user.slug, class: "no-margin display_space_between participant",
   id: "participant_#{user.id}" do %>
-  <%= form_tag conversations_path(sender_id: current_user, receiver_id: user),
+  <%= form_tag conversations_path(sender_id: sender, receiver_id: user),
     remote: true, class: "p-10" do  %>
     <div class="course_feature no-margin justify-content-start">
       <div class="mr-15"><%= req_verified? is_enrolled?(user, user_event) %></div>
