--- a/app/views/user_enroll_events/destroy.js.erb
+++ b/app/views/user_enroll_events/destroy.js.erb
@@ -1,3 +1,3 @@
 $(`#participant_<%= @user.id %>, #participant_<%= @user.id %> ~ hr`).remove();
-$(`#event_participants`).html(`<%= render "event_participants",
+$(`#event_participants`).html(`<%= j render "event_participants",
   event: @user_event %>`);
