--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div id="message_<%= message.id %>" class="message_detail pt-20"
+<div id="message_<%= message.id %>" class="message_detail px-15 py-10"
   data-message-user-id="<%= message.user.slug %>">
 
   <h6 class="display_space_between">
