--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,3 +1,4 @@
 $(`#messages`).append(`<%= j render "messages/message", message: @message, event: @event %>`);
 checkDeleteable(`.message_detail:last`);
+$(`#messages`).scrollTop($(`#messages`).prop(`scrollHeight`));
 $(`#message_content`).val(``);
