fix message channel and real-time update to other participants

--- a/app/assets/stylesheets/event.scss
+++ b/app/assets/stylesheets/event.scss
@@ -148,3 +148,8 @@ $body_gray: #6c6a74;
   from {opacity: 0;}
   to {opacity: 1;}
 }
+
+p img {
+  height: 100% !important;
+  width: 100% !important;
+}
