--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -91,3 +91,14 @@ $page_link_border_gray: #dee2e6;
 .border_bottom_events {
   border-bottom: 1px solid $body_gray;
 }
+
+#notifications_list {
+  left: -75px !important;
+  top: 5px !important;
+  width: 400px;
+}
+
+#options_list {
+  left: -10px !important;
+  top: 10px !important;
+}
