--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,11 +26,13 @@
           <%= link_to "#", class: "dropdown-toggle no-after",
             data: {toggle: "dropdown"}, id: "notifications" do %>
             <%= fa_icon "bell" %>
+
+            <span id="notifications_count" class="badge badge-pill badge-danger"></span>
           <% end %>
 
           <ul id="notifications_list" class="dropdown-menu no-padding">
-            <%= render "notifications/index",
-              notifications: current_user.notifications %>
+            <%= render "notifications/index", notifications: current_user
+              .notifications.take(Settings.model.notification.list) %>
           </ul>
         </li>
 
