--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
     <% end %>
 
     <div class="<%= rescue_body_class %>">
+      <%= hidden_field_tag :current_user_id, current_user&.id %>
       <%= yield %>
     </div>
   </body>
