--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -231,6 +231,10 @@ a, a:hover, a:visited, a:active, a:link {
   padding-bottom: 100px;
 }
 
+.pb-50 {
+  padding-bottom: 50px;
+}
+
 .m-30 {
   margin: 30px;
 }
