--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -36,7 +36,7 @@
                   </div>
                 </div>
               <% elsif item.is_a? Partner %>
-                <%= t ".partner" %>: <%= item.name %>
+                <b><%= t ".partner" %>: <%= item.name %></b>
               <% end %>
             </div>
           <% end %>
